samples/_failures_safe/1761667052_911f45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9789bbfd.c: In function ‘main’:
./samples/SAFE/__tmp_9789bbfd.c:147:22: error: expected ‘)’ at end of input
  147 |     add_edge(&g, 0, 2
      |             ~        ^
      |                      )
./samples/SAFE/__tmp_9789bbfd.c:147:5: error: too few arguments to function ‘add_edge’
  147 |     add_edge(&g, 0, 2
      |     ^~~~~~~~
./samples/SAFE/__tmp_9789bbfd.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_9789bbfd.c:147:5: error: expected declaration or statement at end of input
  147 |     add_edge(&g, 0, 2
      |     ^~~~~~~~
